--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/console
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/blog_entry
-spring.datasource.username=blogentryuser
-spring.datasource.password=ThePassword
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-05.cleardb.net/ad_2c3b8f3a3afef6b?user=b041feb178cd6f\u0026password=60866ea5
+spring.datasource.username=b041feb178cd6f
+spring.datasource.password=60866ea5
